# webrtc_AEC3

android_build/android_project/aar_build/: AndroidManifest.xml
android_build/android_project/src/main/java/cn/watchfun/webrtc/: WebRTCAEC3Real.java
android_build/build_arm64-v8a/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
android_build/build_arm64-v8a/jni/: webrtc_aec3_real_jni.cpp
android_build/build_armeabi-v7a/: CMakeCache.txt  Makefile  cmake_install.cmake
android_build/build_x86/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
android_build/build_x86_64/: CMakeCache.txt  Makefile  cmake_install.cmake
android_output/: INTEGRATION_GUIDE.md  webrtc-aec3-real.aar
my-info/: BUILD_RESULTS_SUMMARY.md  build_android_aar.bash
my-info/logs/: 1.txt  2.txt  3.txt  4.txt
my-info/my-doc/: ace-key-points.txt  my-req.txt
